Now scraps web pages and saves the csv in static

--- a/templates/SRI/index.html
+++ b/templates/SRI/index.html
@@ -5,16 +5,20 @@
 <form method="post">
     {% csrf_token %}
 
+    <label for="name">
+        File name::<input type="text" name="name" placeholder="Products" VALUE="Products">
+    </label>
+
     <label for="website">
-        Url:<input type="url" name="website" placeholder="https://www.wikipedia.org/">
+        Url:<input type="url" name="website" placeholder="https://www.wikipedia.org/" value="https://www.pcgarage.ro/notebook-laptop/">
     </label>
 
     <label for="containerClass">
-        Container class:<input type="text" name="containerClass" placeholder="container_class">
+        Container class:<input type="text" name="containerClass" placeholder="container_class" value="product_box">
     </label>
 
     <label for="ScrappedClasses">
-        Scrapped classes:<input type="text" name="ScrappedClasses" placeholder="class_1 class_2 ...">
+        Scrapped classes:<input type="text" name="ScrappedClasses" placeholder="class_1 class_2 ..." value="product_box_name pb-price">
     </label>
 
     <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Submit</button>
