--- a/templates/SRI/index.html
+++ b/templates/SRI/index.html
@@ -6,19 +6,19 @@
     {% csrf_token %}
 
     <label for="name">
-        File name::<input type="text" name="name" placeholder="Products" VALUE="Products">
+        File name::<input type="text" name="name" placeholder="Products" value="Article">
     </label>
 
     <label for="website">
-        Url:<input type="url" name="website" placeholder="https://www.wikipedia.org/" value="https://www.pcgarage.ro/notebook-laptop/">
+        Url:<input type="url" name="website" placeholder="https://www.wikipedia.org/" value="https://www.hoover.org/">
     </label>
 
     <label for="containerClass">
-        Container class:<input type="text" name="containerClass" placeholder="container_class" value="product_box">
+        Container class:<input type="text" name="containerClass" placeholder="container_class" value="row-1">
     </label>
 
     <label for="ScrappedClasses">
-        Scrapped classes:<input type="text" name="ScrappedClasses" placeholder="class_1 class_2 ..." value="product_box_name pb-price">
+        Scrapped classes:<input type="text" name="ScrappedClasses" placeholder="class_1 class_2 ..." value="pane-item-title pane-meta field-authors pane-meta field-date">
     </label>
 
     <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Submit</button>
