--- a/templates/SRI/layout.html
+++ b/templates/SRI/layout.html
@@ -16,11 +16,18 @@
 </head>
 <body>
     <header>
-        <nav class="navbar d-flex navbar-light bg-white  box-shadow mb-3">
-            <a href="/"class=" navbar-brand"> SRI </a>
-
-
-        </nav>
+        <nav class="navbar navbar-light navbar-expand-md">
+        <div class="container-fluid"><a class="navbar-brand" href="#">SRI</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navcol-1">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link active" href="#">SRI</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Nebula</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Casino</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Shooter</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     </header>
     <main id="main" role="main" class="container-fluid pb-3">
         {% block body %}
