--- a/templates/SRI/index.html
+++ b/templates/SRI/index.html
@@ -9,20 +9,20 @@
             {% csrf_token %}
 
             <label class="form-label" for="name">File name
-                <input class="form-control" type="text" name="name" placeholder="Products" value="Article">
+                <input class="form-control" type="text" name="name" placeholder="Products">
             </label>
 
 
             <label class="form-label" for="website">Url
-                <input class="form-control" type="url" name="website" placeholder="https://www.wikipedia.org/" value="https://www.hoover.org/">
+                <input class="form-control" type="url" name="website" placeholder="https://www.wikipedia.org/">
             </label>
 
             <label class="form-label" FOR="containerClass">Container Class
-                <input class="form-control" type="text" name="containerClass" placeholder="container_class" value="row-1">
+                <input class="form-control" type="text" name="containerClass" placeholder="container_class">
             </label>
 
             <label class="form-label" for="scrappedClasses" >Scrapped Classes
-                <input class="form-control" type="text" name="scrappedClasses" placeholder="class_1 class_2 ..." value="pane-item-title pane-meta field-authors pane-meta field-date">
+                <input class="form-control" type="text" name="scrappedClasses" placeholder="class_1 class_2 ...">
             </label>
             <button class="btn btn-primary" type="submit">Submit</button>
         </form>
